# grabcut

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
inc/: boost_graph.h  cmdlinereader.h  cxxopts.h  gmm.h  grabcut.h  helper_cuda.h  helper_string.h  opencv_graph.h  util.h
inc/grabcut/: boost_graph.h  gmm.h  grabcut.h  graph.h  helper_cuda.h  ndcv.h  opencv_graph.h
snippets/: minimal_fourmap_snippet.py  minimal_trimap.cpp  minimal_trimap_snippet.py
snippets/cpp/: CMakeLists.txt  minimal_fourmap.cpp  minimal_trimap.cpp
snippets/cpp/minimal_fourmap/: CMakeLists.txt
snippets/cpp/minimal_trimap/: CMakeLists.txt  minimal_trimap.cpp
src/: CMakeLists.txt  gmm.cu  grabcut.cpp  main_gmm.cpp  main_grabcut.cpp  main_grabcut.py  minimal_trimap_snippet.py  util.cu
src/python/: MANIFEST.in  opencv_grabcut.py  setup.py
src/python/grabcut/: .gitignore  __init__.py
